# Geist

./: .bazelrc  .cursorrules  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  AGENTS.md  AGENT_STOPPING_CONDITIONS_REPORT.md  BUILD.bazel  Dockerfile  Dockerfile.go  Dockerfile.mlx  FILE_UPLOAD_IMPLEMENTATION_PLAN.md  LANGGRAPH_MIGRATION.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  bootstrap.py  claude.md  conda-install.sh  conftest.py  containers.json  docker-compose.go.yml  docker-compose.misc.yml  docker-compose.wsl.yml  docker-compose.yml  entrypoint.sh  eval_environment.yml  geist-bootstrap.sh  geist-mac.yml  initdb.py  linux_environment.yml  linux_environment_new.yml  linux_environment_x86_x64.yml  mac_arm_environment.yml  mac_environment_arm.yml  main.py  (+5 more)
.claude/: settings.json
.claude/hooks/: guard_dependency_installs.py  guard_env_access.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  codex-review-request.yml  relock.yml
adapters/: __init__.py  adapter_registry.py  async_tool.py  base_adapter.py  flux_image_adapter.py  gemini_image_adapter.py  headless_browser_adapter.py  image_gen_adapter.py  image_gen_base.py  image_generation_adapter.py  inert_adapter.py  job_status_adapter.py  log_adapter.py  markdown_file_adapter.py  mms_adapter.py  search_adapter.py  sendgrid_adapter.py  sms_adapter.py  tool_modes.py  tool_schema.py  whisper_adapter.py
agents/: agent_context.py  agent_registry.py  agent_settings.py  agent_type.py  base_agent.py  command_r.py  exceptions.py  factory.py  gpt4_agent.py  langgraph_agent_mixin.py  langgraph_checkpointer.py  langgraph_state.py  llama2.py  llama_agent.py  local_agent.py  local_agent_langgraph.py  mixtral.py  model_catalog.py  nous_hermes.py  online_agent.py  online_agent_langgraph.py  response_utils.py  tool_calling.py
agents/architectures/: __init__.py  base_runner.py  glm_runner.py  huggingface_runner.py  llama_server_process.py  llama_server_runner.py  mlx_llama_runner.py  qwen3_runner.py  registry.py  transformers_runner.py  vllm_runner.py
agents/models/: agent_completion.py  agent_state.py  chat_result.py  generic_completion.py  gpt4_completion.py  llama_completion.py  tool_calling.py
agents/prompt/: prompt.py
app/: __main__.py  cli.py  database_upgrade.py  environment.py  loopback_security.py  main.py  runtime_config.py  static_web.py
app/api/: utils.py
app/models/: agent.py  completion.py  restriction.py  user_settings.py
app/schemas/: job.py  memory.py  workflow.py
app/services/: agent_context_provider.py  chat_orchestrator.py  document_search.py  embedding_service.py  file_processor.py  file_storage.py  job_queue.py  local_models.py  memory_context.py  memory_extraction.py  memory_processor.py  memory_scheduler.py  memory_service.py  model_downloads.py  provider_keys.py  text_extraction.py  tool_registry.py  tts.py  user_settings_service.py  voice_session.py  workflow_execution.py
client/geist/: Dockerfile  package-lock.json  package.json  playwright.config.ts
client/platz/: package.json
docs/: CHAT_TOOL_REGISTRY.md  PRE_COMMIT_SETUP.md  RUST_MIGRATION_PLAN.md  SECURITY-SETUP.md  agents.md  go-migration-plan.md  native-sidecar.md  open_weight_models.md
evals/: README.md  test_tool_routing.py
evals/cases/: tool_routing.json
go/: BUILD.bazel  go.mod  go.sum
go/cmd/server/: BUILD.bazel  main.go
go/internal/agent/: BUILD.bazel  agent.go  factory.go  local_agent.go  online_agent.go
go/internal/api/: BUILD.bazel  router.go
go/internal/api/handlers/: BUILD.bazel  agent.go  health.go  helpers.go  models.go  user_settings.go
go/internal/api/middleware/: BUILD.bazel  cors.go  logging.go
go/internal/config/: BUILD.bazel  config.go
go/internal/database/: BUILD.bazel  database.go
go/internal/database/repository/: BUILD.bazel  chat_session.go
go/internal/inference/proto/: BUILD.bazel  inference.pb.go
go/internal/models/: BUILD.bazel  agent.go  completion.go  registry.go
go/tests/integration/: BUILD.bazel  api_test.go
go/tests/unit/: BUILD.bazel  agent_test.go  config_test.go  handlers_test.go  models_test.go
migrations/: __init__.py  env.py
migrations/versions/: 0f40002d3d1f_create_workflow_tables.py  __init__.py  a1b2c3d4e5f6_add_langgraph_checkpoint_fields.py  a1b2c3d4e5f6_add_notes_table.py  a4d6e8f0b2c4_add_local_artifact_selection.py  a7c9e1f3b5d8_add_provider_credential_table.py  adafc1380eb9_add_chat_session_and_user_tables.py  b8c4d2e6f0a3_add_agent_snapshot_table.py  c3a1f5e7d9b2_add_job_table.py  d7f88cab37e0_initial_migration.py  (+4 more)
mlx_service/: __init__.py  generate_proto.sh  inference_pb2.py  requirements.txt  server.py  service.py
plans/: 143-ARCHITECTURAL-IMPROVEMENTS.md  144-SETTINGS-UI.md  145-Online-Offline-Image-Gen.md  145-VOICE-CHAT.md  146-INFINITE-SCROLL.md  146-UV-CONVERSION.md  147-ENHANCED-MODEL-CHOICE.md  148-MLX-LLAMA-CONVERSION.md  149-MLX-LLAMA-TESTS.md  150-mlx-llama3-rope-chat-template.md  151-AGENT-MODE-AND-AGENTS-TAB.md  151-AI-TEST-LOOP-AND-HOOKS.md  151-QWEN3-VLLM-CONSOLIDATION.md  151-QWEN3-VOICE-TTS.md  151-SQLITE_STORAGE_ENGINE.md  151-supply-chain-hardening.md  152-CHAT-LOADING-ANIMATION.md  152-GENERIC-OPEN-WEIGHT-MODEL-SUPPORT.md  152-NATIVE-CHAT-TOOL-ORCHESTRATION.md  152-SYNC-JOB-QUEUE.md  152-switchable-mlx-llama-backends.md  153-CHAT-STREAM-RECOVERY-AND-E2E.md  153-DEBOUNCED-HIERARCHICAL-CHAT-MEMORY.md  154-AGENT-CONVERSATION-RUN-STATE.md  155-CROSS-PLATFORM-NATIVE-RUNTIME.md
proto/: BUILD.bazel  inference.proto
scripts/: benchmark_mlx_llama.py  build_native_sidecar.py  copy_environment.py  copy_weights.py  download_models.py  geist_frozen_entrypoint.py  generate_compose.py  insert_default_user.py  insert_presets.py  list_hf_open_models.py  model_filter_config.py  pre_commit_frontend_lint.sh  pre_commit_security_check.py  sync_models.py  test_arch_availability.py  verify_dependency_policy.py
tests/: e2e_server.py  test_app_lifecycle.py  test_cli.py  test_loopback_security.py  test_runtime_config.py  test_static_web.py
tests/agents/: test_qwen3.py  (+23 more)
utils/: logging.py
(+147 files in other folders)
