[project]
name = "geist"
version = "0.1.0"
description = "Geist - AI Agent Framework"
authors = [
    {name = "David Dworetzky", email = "djdworetz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web Framework
    "fastapi==0.115.6",
    "uvicorn==0.20.0",
    "starlette==0.41.3",
    "python-multipart==0.0.20",

    # HTTP/Async
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.3.2",
    "anyio==4.8.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "h11==0.14.0",
    "click==8.1.8",

    # Database
    "sqlalchemy==2.0.37",
    "alembic==1.15.2",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",

    # Data Processing
    "numpy==2.2.2",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "pillow==11.1.0",
    "openpyxl==3.1.5",
    "et-xmlfile==2.0.0",

    # Machine Learning - PyTorch
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "torchdata==0.11.0",
    "torchao==0.10.0",
    "torchtune==0.6.0",

    # Machine Learning - MLX
    "mlx>=0.22.0",

    # NLP/Transformers
    "transformers==4.48.1",
    "tokenizers==0.21.0",
    "sentencepiece==0.2.0",
    "tiktoken==0.9.0",
    "safetensors==0.5.2",

    # HuggingFace
    "huggingface-hub==0.27.1",
    "hf-transfer==0.1.9",
    "datasets==3.5.0",

    # Math/Science
    "sympy==1.13.1",
    "mpmath==1.3.0",
    "einops==0.8.1",
    "networkx==3.4.2",

    # Configuration
    "omegaconf==2.3.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",

    # Validation
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "annotated-types==0.7.0",

    # Security/Auth
    "pyjwt==2.10.1",
    "pycryptodomex==3.22.0",

    # HTTP Clients/APIs
    "requests==2.32.3",
    "urllib3==2.3.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "chardet==5.2.0",

    # Utilities
    "tqdm==4.67.1",
    "filelock==3.16.1",
    "fsspec==2024.12.0",
    "blobfile==3.0.0",
    "psutil==6.1.1",

    # Parsing/Templates
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "mako==1.3.10",
    "lxml==5.3.1",
    "antlr4-python3-runtime==4.9.3",

    # Data Types
    "attrs==25.1.0",
    "frozenlist==1.5.0",
    "multidict==6.1.0",
    "propcache==0.2.1",
    "sniffio==1.3.1",
    "typing-extensions==4.12.2",

    # Multiprocessing
    "dill==0.3.8",
    "multiprocess==0.70.16",

    # Time/Date
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "tzdata==2025.2",

    # Hashing
    "xxhash==3.5.0",
    "yarl==1.18.3",

    # Miscellaneous
    "six==1.17.0",
    "regex==2024.11.6",
    "packaging==24.2",
    "mimetypes-magic==0.4.30",
    "kagglehub==0.3.10",
    "twilio==9.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pluggy==1.5.0",
    "iniconfig==2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pluggy==1.5.0",
    "iniconfig==2.0.0",
]
