[project]
name = "geist"
version = "0.1.0"
description = "FOSS project for private local AI. Chat and Agents / Assistants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    # API server
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "python-multipart==0.0.20",
    # Persistence (SQLite is the default provider; see [project.optional-dependencies] for postgres)
    "sqlalchemy==2.0.38",
    "alembic==1.15.2",
    # Config / models
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    # Torch's CPU compiler imports setuptools at runtime.
    "setuptools==78.1.1",
    # HTTP clients and adapters
    "requests==2.32.3",
    "httpx==0.28.1",
    "aiohttp==3.11.12",
    "aiohttp-retry==2.9.1",
    "twilio==9.4.5",
    # File/text extraction services
    "openpyxl==3.1.5",
    "chardet==5.2.0",
    # Local inference stack
    "numpy==2.2.3",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchtune==0.6.0",
    # torchtune imports torchao at runtime but does not declare it as a dependency.
    "torchao==0.10.0",
    "accelerate==1.14.0",
    "transformers==4.57.6",
    "tokenizers==0.22.1",
    "huggingface-hub==0.36.0",
    "safetensors==0.5.2",
    "sentencepiece==0.2.0",
    "einops==0.8.1",
    "tiktoken==0.9.0",
    # Older mlx releases (0.22/0.23 pinned by the conda envs) no longer have wheels on PyPI.
    # Linux needs an explicit backend (mlx-cpu); macOS arm64 pulls mlx-metal automatically.
    "mlx==0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx[cpu]==0.31.2; sys_platform == 'linux'",
    "mlx-lm==0.29.1",
    "psutil==6.1.1",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary==2.9.10",
]
voice = [
    "sounddevice==0.5.0",
    "sphn==0.1.12",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "mypy==1.13.0",
    "ruff==0.8.4",
    "pre-commit==4.0.1",
    "types-PyYAML==6.0.12.20240917",
    "types-python-dateutil==2.9.0.20241206",
    "types-requests==2.32.0.20241016",
    "types-six==1.16.21.20240513",
]

[tool.uv]
# Geist is an application, not an installable library.
package = false
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

# Linux resolves torch from the CPU wheel index: the default PyPI Linux wheels
# bundle the full CUDA/nvidia library set (~6GB installed), which the
# cross-platform container never uses (macOS runs MLX; the container is CPU).
# GPU hosts can be reintroduced later via uv's conflicting-extras pattern
# (a cu12x extra pointing at the matching download.pytorch.org index).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
# Python version to target
python_version = "3.11"

# Understand old-style SQLAlchemy Column attributes on ORM models
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Enable warnings for untyped code
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Disallow untyped definitions and calls
disallow_untyped_defs = false  # Start with false, can be made stricter later
disallow_untyped_calls = false  # Start with false, can be made stricter later
disallow_incomplete_defs = false
check_untyped_defs = true

# Strict optional checking
strict_optional = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Platform configuration
platform = "linux"

# Ignore missing imports for third-party libraries without type stubs
ignore_missing_imports = true

# Show error codes in output
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude paths
exclude = [
    '^migrations/',
    '^tests/',
    '^scripts/',
    '^venv/',
    '^\.venv/',
    '^build/',
    '^dist/',
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# RATCHET: old-style SQLAlchemy models predate typed Mapped[] declarations.
# Remove this override when models migrate to SQLAlchemy 2.0 typed mappings.
[[tool.mypy.overrides]]
module = "app.models.database.*"
ignore_errors = true

# Vendored/adapted third-party model code — typed upstream, kept close to source
[[tool.mypy.overrides]]
module = "agents.architectures.moshi.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.architectures.sesame.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.architectures.llama.*"
ignore_errors = true

[tool.ruff]
# Target Python 3.11
target-version = "py311"
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    "build",
    "dist",
    "migrations",
    "__pycache__",
    # Vendored/adapted third-party model code — linted upstream, kept close to source
    "agents/architectures/moshi",
    "agents/architectures/sesame",
    "agents/architectures/llama/generation.py",
    "agents/architectures/llama/tokenizer.py",
    "agents/architectures/llama/llama_transformers.py",
]

[tool.ruff.lint]
# Enable these rule sets:
# E/W - pycodestyle errors and warnings
# F - Pyflakes
# I - isort (import sorting)
# N - pep8-naming
# UP - pyupgrade (upgrade syntax for newer Python versions)
# B - flake8-bugbear (find likely bugs)
# C4 - flake8-comprehensions (better list/dict/set comprehensions)
# SIM - flake8-simplify (simplify code)
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (common in FastAPI)
    "N806",  # Uppercase locals are conventional in ML code (weights W, matrices Q/K/V)
    "N812",  # Lowercase-imported-as-non-lowercase (torch.nn.functional as F convention)
    "N999",  # Repository root directory is 'Geist'; module path casing is not fixable here
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Re-exports
"tests/**" = ["E402"]  # pytest.importorskip before imports is the canonical pattern

[tool.ruff.lint.isort]
known-first-party = ["app", "agents", "adapters", "utils"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "lf"

# Bandit security configuration
[tool.bandit]
exclude_dirs = [
    "/tests/",
    "*/tests/*",
    "*/test_*.py",
    ".venv",
    "venv",
    "build",
    "dist"
]

# Skip specific tests if needed
# B101: assert_used - often used in tests
# B601: paramiko_calls - if you use paramiko
skips = ["B101"]
