load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/DavidDworetzky/Geist/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/agent",
        "//internal/api",
        "//internal/config",
        "//internal/database",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
