load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/DavidDworetzky/Geist/internal/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kelseyhightower_envconfig//:envconfig",
    ],
)

go_test(
    name = "config_test",
    srcs = ["//tests/unit:config_test.go"],
    embed = [":config"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
