load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["database.go"],
    importpath = "github.com/DavidDworetzky/Geist/internal/database",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_rs_zerolog//log",
    ],
)
