load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = ["inference.pb.go"],
    importpath = "github.com/DavidDworetzky/Geist/internal/inference/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
